tests/char_set/char_set.exp
Error: test.js:14
 14:   ("aaaa": $CharSet<"ab">); // error
        ^^^^^^ string literal `aaaa`. This type is incompatible with
 14:   ("aaaa": $CharSet<"ab">); // error
                ^^^^^^^^^^^^^^ character set `ab`
   14:   ("aaaa": $CharSet<"ab">); // error
          ^^^^^^ `a` is duplicated

Error: test.js:15
 15:   ("c": $CharSet<"ab">); // error
        ^^^ string literal `c`. This type is incompatible with
 15:   ("c": $CharSet<"ab">); // error
             ^^^^^^^^^^^^^^ character set `ab`
   15:   ("c": $CharSet<"ab">); // error
          ^^^ `c` is not a member of the set

Error: test.js:16
 16:   ("ac": $CharSet<"ab">); // error
        ^^^^ string literal `ac`. This type is incompatible with
 16:   ("ac": $CharSet<"ab">); // error
              ^^^^^^^^^^^^^^ character set `ab`
   16:   ("ac": $CharSet<"ab">); // error
          ^^^^ `c` is not a member of the set

Error: test.js:20
 20:   new C(x);
             ^ string literal `abcd`. This type is incompatible with
  6:     constructor(flags?: C$flags): C;
                             ^^^^^^^ C$flags
   22: g("abcd");
         ^^^^^^ `c` is not a member of the set
   22: g("abcd");
         ^^^^^^ `d` is not a member of the set

Error: test.js:25
 25:   (x: "foo");
        ^ Cannot cast `x` to string literal `foo` because string [1] is incompatible with string literal `foo` [2].
  References:
   24: function h(x: $CharSet<"ab">) {
                     ^^^^^^^^^^^^^^ [1]: string
   25:   (x: "foo");
             ^^^^^ [2]: string literal `foo`


Found 5 errors
